base documentation added
