# storage/api-docs/api-docs.json
@@ -1,11 +1,11 @@
 {
     "openapi": "3.0.0",
     "info": {
-        "title": "Kodementor Api Documentation",
-        "description": "Kodementor Api Documentation",
+        "title": "SU Ples - Api Documentation",
+        "description": "Api Documentation for UTB Representative Ball",
         "contact": {
-            "name": "Vijay Rana",
-            "email": "info@kodementor.com"
+            "name": "Sedlar David",
+            "email": "sedlar@sutb.cz"
         },
         "license": {
             "name": "Apache 2.0",
@@ -19,62 +19,90 @@
         }
     ],
     "paths": {
-        "/articles": {
+        "/reservations": {
             "get": {
                 "tags": [
-                    "Articles"
+                    "Reservations"
                 ],
-                "summary": "Get list of articles",
-                "description": "Get list of articles",
+                "summary": "Get list of reservations",
+                "description": "Get list of reservations",
                 "operationId": "index",
-                "parameters": [
-                    {
-                        "name": "limit",
-                        "in": "query",
-                        "description": "limit",
-                        "required": false,
-                        "schema": {
-                            "type": "integer"
-                        }
-                    },
-                    {
-                        "name": "page",
-                        "in": "query",
-                        "description": "the page number",
-                        "required": false,
-                        "schema": {
-                            "type": "integer"
-                        }
-                    },
-                    {
-                        "name": "order",
-                        "in": "query",
-                        "description": "order  accepts 'asc' or 'desc'",
-                        "required": false,
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
                 "responses": {
                     "200": {
-                        "description": "Success",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "status": {
-                                            "type": "integer",
-                                            "example": "200"
-                                        },
-                                        "data": {
-                                            "type": "object"
-                                        }
+                        "description": "OK"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "Reservations"
+                ],
+                "summary": "Creates a reservation",
+                "operationId": "1aabc7d432cc652e63cfc3fb514132cd",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "name": {
+                                        "type": "string"
                                     },
-                                    "type": "object"
+                                    "email": {
+                                        "type": "string"
+                                    },
+                                    "tel": {
+                                        "type": "integer"
+                                    },
+                                    "note": {
+                                        "type": "string"
+                                    },
+                                    "stand": {
+                                        "type": "integer"
+                                    },
+                                    "seats": {
+                                        "type": "integer"
+                                    },
+                                    "": {
+                                        "description": "List of Seat ids",
+                                        "type": "array",
+                                        "items": {
+                                            "type": "array",
+                                            "items": {}
+                                        }
+                                    }
+                                },
+                                "type": "object",
+                                "example": {
+                                    "name": "David Sedlar",
+                                    "email": "sedlar@sutb.cz",
+                                    "tel": 555222555,
+                                    "note": "Popici ples, chci celej stul...",
+                                    "stand": 3,
+                                    "seats": [
+                                        2,
+                                        3,
+                                        5
+                                    ]
                                 }
                             }
                         }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "404": {
+                        "description": "Not Found"
                     }
                 }
             }
